<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:iconTint="@color/normalTextColor"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_subscription"
        android:icon="@drawable/ic_subs"
        android:iconTint="@color/normalTextColor"
        android:title="@string/title_subscription" />
    <item
        android:id="@+id/navigation_recent"
        android:icon="@drawable/ic_recent"
        android:iconTint="@color/colorPrimary1"
        android:title="@string/title_recent" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more"
        android:iconTint="@color/colorPrimary1"
        android:title="@string/title_more" />

</menu>
