<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddMovieFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/twenty_dp"
            android:gravity="center"
            android:hint="@string/title_movie_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/twenty_dp"
            android:gravity="center"
            android:hint="@string/title_category" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/twenty_dp"
            android:background="@android:drawable/edit_text"
            android:gravity="center"
            android:hint="@string/title_long_des"
            android:lines="5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:layout_marginBottom="@dimen/ten_dp"
            android:gravity="center"
            android:text="@string/title_select_movie"
            android:textColor="@color/changeTextColor"
            android:textSize="@dimen/normal_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:layout_marginBottom="@dimen/twenty_dp"
            android:background="@android:drawable/edit_text"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/twenty_dp"
                android:text="More" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_margin="@dimen/ten_dp">

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin_left"
            android:layout_marginRight="@dimen/text_margin_left"
            android:layout_marginBottom="@dimen/twenty_dp"
            android:background="@color/normalButtonColor"
            android:padding="@dimen/twenty_dp"
            android:text="@string/btn_upload"
            android:textSize="@dimen/large_text_size" />
    </LinearLayout>
</ScrollView>