<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.TransactionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/bc_margin_size"
        android:paddingBottom="@dimen/bc_margin_size">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="@dimen/sub_video_width"
            android:layout_height="@dimen/sub_video_height"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:clickable="true"
            android:src="@drawable/logo_splash1"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/fab_margin"
                android:text="PS Flims"
                android:textColor="@color/changeTextColor"
                android:textSize="@dimen/xlarge_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtAccountDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/fab_margin"
                android:text="Account Details"
                android:textColor="@color/changeTextColor"
                android:textSize="@dimen/normal_text_size" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/twenty_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginRight="@dimen/twenty_dp"
        android:layout_marginBottom="@dimen/ten_dp"
        android:background="@color/colorMainTheme"
        android:orientation="horizontal"
        android:padding="@dimen/ten_dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:text="@string/title_balance_avl"
            android:textColor="@color/normalTextColor"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="$ 60.00"
            android:textColor="@color/normalTextColor"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/twenty_dp"
            android:paddingTop="@dimen/ten_dp"
            android:paddingBottom="@dimen/ten_dp"
            android:text="@string/title_acc_details"
            android:textColor="@color/changeTextColor"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/border_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="@dimen/twenty_dp"
                android:paddingTop="@dimen/ten_dp"
                android:paddingBottom="@dimen/ten_dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_total_investment"
                    android:textColor="@color/changeTextColor"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:id="@+id/txt_total_investment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$ 100.22"
                    android:textColor="@color/changeTextColor"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:text="@string/title_total_investment"
                    android:textColor="@color/changeTextColor"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:id="@+id/txt_lst_transaction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$ 13.22"
                    android:textColor="@color/changeTextColor"
                    android:textSize="@dimen/small_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="@dimen/twenty_dp"
                android:paddingTop="@dimen/ten_dp"
                android:paddingBottom="@dimen/ten_dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_total_earning"
                    android:textColor="@color/changeTextColor"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:id="@+id/txt_total_earning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$ 102.22"
                    android:textColor="@color/changeTextColor"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:text="@string/title_lst_acc_bal"
                    android:textColor="@color/changeTextColor"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:id="@+id/txt_lst_acc_bal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$ 122.22"
                    android:textColor="@color/changeTextColor"
                    android:textSize="@dimen/small_text_size" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/border_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/twenty_dp"
            android:paddingTop="@dimen/ten_dp"
            android:paddingBottom="@dimen/ten_dp"
            android:text="@string/title_posted_transactions"
            android:textColor="@color/changeTextColor"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/border_color" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycle_transaction"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

</LinearLayout>