<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.PlayVideoFragment">

    <VideoView
        android:id="@+id/video"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_video_height" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txt_video_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/ten_dp"
                android:text="Happy Season 01 Episode 01"
                android:textColor="@color/changeTextColor"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_view_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/ten_dp"
                android:text="36520 Views"
                android:textColor="@color/changeTextColor"
                android:textSize="@dimen/xsmall_text_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/twenty_dp">

                <TextView
                    android:id="@+id/txt_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_like"
                    android:drawablePadding="@dimen/five_dp"
                    android:gravity="center"
                    android:padding="@dimen/ten_dp"
                    android:text="545"
                    android:textColor="@color/changeTextColor" />

                <TextView
                    android:id="@+id/txt_dis_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_dislike"
                    android:drawablePadding="@dimen/five_dp"
                    android:gravity="center"
                    android:padding="@dimen/ten_dp"
                    android:text="45"
                    android:textColor="@color/changeTextColor" />

                <TextView
                    android:id="@+id/txt_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_share_option"
                    android:drawablePadding="@dimen/five_dp"
                    android:gravity="center"
                    android:padding="@dimen/ten_dp"
                    android:text="@string/action_share"
                    android:textColor="@color/changeTextColor" />

                <TextView
                    android:id="@+id/txt_add_to_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_add"
                    android:drawablePadding="@dimen/five_dp"
                    android:gravity="center"
                    android:padding="@dimen/ten_dp"
                    android:text="Add to list"
                    android:textColor="@color/changeTextColor" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/ten_dp"
                android:text="@string/title_description"
                android:textColor="@color/changeTextColor"
                android:textSize="@dimen/xsmall_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_short_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:padding="@dimen/ten_dp"
                android:text="Added on Sep 30, 2018 The Göscheneralp is very close to the large St.Gotthard, a well-known mountain in Switzerland."
                android:textColor="@color/changeTextColor"
                android:textSize="@dimen/xsmall_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_marginRight="@dimen/twenty_dp"
                android:drawableRight="@drawable/ic_arrow_down"
                android:drawablePadding="@dimen/five_dp"
                android:drawableTint="@color/changeTextColor"
                android:text="@string/title_more"
                android:textColor="@color/changeTextColor"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/border_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/five_dp">

                <LinearLayout
                    android:id="@+id/channel_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_width="@dimen/channel_video_width"
                        android:layout_height="@dimen/channel_video_height"
                        android:layout_gravity="center"
                        android:clickable="true"
                        android:src="@drawable/logo_splash1"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="2dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/ten_dp"
                        android:gravity="left|center"
                        android:text="PS Films"
                        android:textColor="@color/changeTextColor"
                        android:textSize="@dimen/normal_text_size"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button_height"
                        android:layout_margin="@dimen/five_dp"
                        android:layout_weight="1"
                        android:background="@color/changeTextColor"
                        android:padding="@dimen/five_dp"
                        android:text="@string/title_subscribe"
                        android:textSize="@dimen/xsmall_text_size" />

                    <Button
                        android:id="@+id/btn_invest"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button_height"
                        android:layout_margin="@dimen/five_dp"
                        android:layout_weight="1"
                        android:background="@color/colorMainTheme"
                        android:padding="@dimen/five_dp"
                        android:text="@string/title_invest"
                        android:textSize="@dimen/xsmall_text_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/five_dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="$30.00"
                        android:textColor="@color/backgroundColorNormalTabLayout"
                        android:textSize="@dimen/small_text_size" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/border_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/ten_dp"
                android:text="@string/title_suggestions"
                android:textColor="@color/changeTextColor"
                android:textSize="@dimen/xsmall_text_size"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycle_suggestion_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_video_height"
                android:scrollbars="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/ten_dp">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/user_image"
                    android:layout_width="@dimen/channel_video_width"
                    android:layout_height="@dimen/channel_video_height"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:src="@drawable/logo_splash1"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Add comment"
                    android:textColor="@color/changeTextColor" />

                <Button
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height"
                    android:layout_margin="@dimen/five_dp"
                    android:background="@color/changeTextColor"
                    android:padding="@dimen/five_dp"
                    android:text="ADD"
                    android:textSize="@dimen/xsmall_text_size" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>